# ai-teaches-me

./: .gitignore  README.md
.obsidian/: workspace.json
6.5840-distributed-systems/: README.md
6.5840-distributed-systems/1.map-reduce/: lab-mr.html
apache-kafka/: docker-compose.yml
apache-kafka/discussions/: 20251123.review.md
apache-kafka/notes/: a.README.md  b.VERSION.md  c.CONFIGURATION.md  d.TOPICS.md  e.PRODUCERS_CONSUMERS.md  f.UNCOVERED.md
consul/: .gitignore  README.md  consul.sh  docker-compose.yml  quick-start.sh
consul/monitoring/: prometheus.yml
consul/notes/: a.introduction.md  b.service-discovery.md  c.service-mesh.md  d.kv-store.md  e.multi-datacenter.md  f.observability.md  g.advanced-topics.md
etf/: README.md
grafana-alloy/: .gitignore  Makefile  README.md  demo.alloy  docker-compose.yml
grafana-alloy/config/: config.alloy  identifier
helm/: README.md
kubernetes/: README.md
kubernetes/phase1-scheduling/: README.md
kubernetes/phase2-availability/: README.md
kubernetes/phase3-networking/: README.md
kubernetes/phase4-storage/: README.md
kubernetes/phase5-security/: README.md
kubernetes/phase6-resources/: README.md
kubernetes/phase7-observability/: README.md
kubernetes/phase8-patterns/: README.md
rust/: README.md
rust/phase1-foundation/: README.md  exercises.rs
rust/phase2-ownership/: README.md  exercises.rs
rust/phase3-structs-enums/: README.md  (+1 more)
uv/: EXERCISES.md  README.md
uv/demo-project/todo-api/: pyproject.toml
uv/demo-project/todo-api/src/: main.py
uv/demo-project/todo-api/tests/: test_api.py
(+38 files in other folders)
