[project]
name = "todo-api"
version = "0.1.0"
description = "FastAPI TODO API for UV exercises"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
dev = "uvicorn src.main:app --reload"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]
